My First Project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>{Sthefania Rodriguez Lucas
+  text-align:center;
+    }</title>
+  </head>
+  <body>{
+  color:purple;
+  }
+
+  <h1></h1>
+      <p></p>
+
+    </body>
+</html>
