Made changes to my first webpage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{Sthefania Rodriguez Lucas
-  text-align:center;
-    }</title>
+    <title>Sthefania Rodriguez Lucas</title>
   </head>
   <body>{
   color:purple;
