Set up for the picture into the center

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <title>Sthefania Rodriguez Lucas</title>
   </head>
-  <body>{
-  color:purple;
-  }
+  <body>
 
-  <h1></h1>
-      <p></p>
+  <h1>I'm was born in Mexico City but raised in California. I like to play soccer and watch movies.</h1>
+      <p>I´m finished my high school at a school called "Instituto Bassols"</p>
 
     </body>
 </html>
