done with my bio

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
-    <title>Sthefania Rodriguez Lucas</title>
+    <meta charset="utf-8">
+    <title>My Biography</title>
   </head>
   <body>
+    <center><h1>Sthefania Rodriguez Lucas</h1></center>
+    <center> <img src="/home/hc031/Downloads/student24.png" alt="a picture of myself"width="25%"> </center>
+  </body>
 
-  <h1>I'm was born in Mexico City but raised in California. I like to play soccer and watch movies.</h1>
-      <p>I´m finished my high school at a school called "Instituto Bassols"</p>
+  <h2>Biography</h2>
+    <p>I was born in Mexico City, and I like to play soccer and watch movies.I have been playing soccer since I was 12 years old and until now I still love playing soccer.  </p>
 
-    </body>
+
+  <h2>Education</h2>
+   <p>I used to study at this school named "Instituto Bassols" I finished my high school there but I started high school at "Polytecnic High School" in California where I was raised.</p>
+
 </html>
