--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
    <center><h1>Sthefania Rodriguez Lucas</h1></center>
-   <center> <img src="student24.png" alt="a picture of myself"width="25%"> </center>
+   <center> <img src="Images/student24.png" alt="a picture of myself"width="25%"> </center>
  </body>
 
 <body>
